@@ -1,8 +1,9 @@
 CHANGES
 =======
 
+* Change requirements for stable/newton
 * Fix errors in .travis file
-* Add authors and changelog, fix docstring in top-level __init__
+* Add authors and changelog, fix docstring in top-level \_\_init\_\_
 * Add F5 Neutron Networking code to travis
 * Initial implementation of F5 Network Vendor code for Neutron
 * Initial commit
